# RankDB

./: .gitignore  PROJECT_LOG.md  README.md  Updated Cargo.toml  nuxt.config.ts  package-lock.json  package.json
.edge-headless/: 33a36e61-e7f2-4668-b42a-7005783386e9.tmp  44b150b2-2aa1-433d-a904-ccc044e59ff7.tmp  7d4626f1-65f6-40a9-a128-6d13cfd85ae0.tmp  Local State  Local State~RF1af92ba.TMP  cba18363-1cad-47cd-85f9-b603df5b947f.tmp  f22da732-a2f8-451c-a6cc-24684dcbd3c1.tmp  ff0cf564-b6ad-4ab9-a85b-d272739842d8.tmp
.edge-headless/Crashpad/: metadata
.edge-headless/Crashpad/reports/: 2ac2e0e5-fc88-43ad-8c8c-550e8bb19dd9.dmp  6695e0e6-0255-4739-ada0-00c50d86dea7.dmp
.edge-headless/Default/: Favicons  History  Preferences  Secure Preferences  Web Data  load_statistics.db
.edge-headless/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000015  f_000017  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  index
.edge-headless/Default/Code Cache/js/: 0622cb02cfb02493_0  07055ee2b766c5c9_0  0cd1db2adee2a19d_0  2a8a6f695a3ff316_0  2cca9bc741a6516d_0  4e078a06dd04d0e5_0  5cce1706364839f1_0  5fbb54f36261c413_0  6104235fd0fdec5f_0  7de0dc67a2b3a69c_0  8020acacb3d13763_0  83918874414e472b_0  8bb1867be67136eb_0  945cb8fb56d09a8e_0  94b51245e8c3049c_0  9a494de15abddb59_0  (+11 more)
.edge-headless/Default/DawnGraphiteCache/: index
.edge-headless/Default/DawnWebGPUCache/: index
.edge-headless/Default/Extension Rules/: LOG
.edge-headless/Default/Extension Scripts/: LOG
.edge-headless/Default/Extension State/: LOG  LOG.old
.edge-headless/Default/GPUCache/: index
.edge-headless/Default/Network/: Network Persistent State
.edge-headless/Default/Session Storage/: LOG  LOG.old
.edge-headless/Default/Sessions/: Session_13417985615460249  Session_13417985716524240  Tabs_13417985615523141  Tabs_13417985716580262
.edge-headless/Default/Site Characteristics Database/: LOG  LOG.old
.edge-headless/Default/WebStorage/: QuotaManager
.edge-headless/Default/shared_proto_db/: LOG  LOG.old
.edge-headless/GrShaderCache/: index
.edge-headless/GraphiteDawnCache/: index
.edge-headless/ShaderCache/: index
.github/workflows/: release.yml
Updated src-tauri/src/: main.rs
app/: app.vue
app/assets/css/: main.css
app/components/rankdb/: RankDbAccountContextMenu.vue  RankDbAccountInfoModal.vue  RankDbApp.vue  RankDbBadgeAnimations.backup.md  RankDbCredentialsModal.vue  RankDbDeleteModal.vue  RankDbGroupContextMenu.vue  RankDbHeader.vue  RankDbNotifications.vue  RankDbRankPicker.vue
app/constants/: rankdb.ts
app/types/: rankdb.ts
docs/: GITHUB_UPDATES.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+52 files in other folders)
