[package]
name = "rankdb"
version = "0.1.0"
description = "RankDB desktop app"
authors = ["Merk"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rankdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
getrandom = "0.2.17"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
pbkdf2 = "0.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
